# SMM_VLDB24

./: README.md
benchmarks/apache/: httpd-mpm.conf  httpd.conf
benchmarks/microbenchmark/: CMakeLists.txt  analyze_PageTableStress.sh  analyze_cases.sh  run_all_mmap-munmap.sh  run_all_page-eviction.sh  run_case_0.sh  run_case_1-5.sh  run_case_MappingTypeComparison.sh  run_case_PageTableStress.sh  run_env.sh
benchmarks/microbenchmark/src/: CMakeLists.txt  bench.cpp  helper.hpp
benchmarks/monitoring/: analyze_apache.sh  analyze_ycsb.sh  run_all.sh  run_apache.sh  run_env.sh  run_leveldb.sh  run_lmdb.sh  run_sleep.sh
benchmarks/parsec/: parsec.sh
benchmarks/scripts/: cores_helper.sh  kill_background.sh  mount_helper.sh  ram_helpers.sh
benchmarks/tool_alloc/: Makefile  block_memory_kb.c  limit_memory_to_gb.c
implementations/FastMap-main_29-Sep-21/driver/: main.c
implementations/FastMap-main_29-Sep-21/ioctl/: def.h  set.c
implementations/FastMap-main_29-Sep-21/scripts/: load-it-blkdev.sh
implementations/ShortLivedPrivateMappings/: linux-4.5-tlb.patch
implementations/mmap_thread_private/: make_kernels.sh
implementations/mmap_thread_private/configs/: config-5.15.12
implementations/mmap_thread_private/linux-5.15.12/: Kconfig
implementations/mmap_thread_private/linux-5.15.12/mm/: filemap.c  (+7 more)
implementations/mmap_thread_private/test/: CMakeLists.txt  main.cpp  thread_private_mmap.h
implementations/mmap_thread_private/tpmm/: tpmm.c  tpmm.h
scripts/: create_nullblk.sh  enable_fastmap.sh  get_hardware_summary.sh  remove_nullblk.sh  test_nullblk.sh
(+9 files in other folders)
